Updating project to use mongoDB

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,26 @@
-spring.datasource.name=ecommercedb
+spring.application.name=Ecommerce
+
+#Mongo Config
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=ecom
+spring.data.mongodb.repositories.enabled=true
+
+#H2
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2
+#spring.datasource.url=jdbc:h2:mem:custom-mapper
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=sa
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+#JPA
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
-#H2 settings
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+spring.jpa.properties.hibernate.format_sql=true
+
+#OAuth2
+security.oauth2.client.scope=password
+security.oauth2.client.client-id=ecommerce
+security.oauth2.client.client-secret=ecommerce123
