Creation of class tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,26 +1,16 @@
 spring.application.name=Ecommerce
-
 #Mongo Config
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=ecom
-spring.data.mongodb.repositories.enabled=true
-
-#H2
-#spring.h2.console.enabled=true
-#spring.h2.console.path=/h2
-#spring.datasource.url=jdbc:h2:mem:custom-mapper
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=sa
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
+spring.data.mongodb.host=${MONGO_HOST:localhost}
+spring.data.mongodb.port=${MONGO_PORT:27017}
+spring.data.mongodb.username=${MONGODB_USER:ecomuser}
+spring.data.mongodb.password=${MONGODB_PASSWORD:ecom1234}
+spring.data.mongodb.database=${MONGO_DATABASE:ecom}
+spring.data.mongodb.repositories.enabled=${MONGO_REPOSITORIES_ENABLED:true}
 #JPA
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-
+spring.jpa.hibernate.ddl-auto=${JPA_HIBERNATE_DDL_AUTO:create}
+spring.jpa.show-sql=${JPA_SHOW_SQL:false}
+spring.jpa.properties.hibernate.format_sql=${JPA_PROPERTIES_HIBERNATE_FORMAT_SQL:true}
 #OAuth2
-security.oauth2.client.scope=password
-security.oauth2.client.client-id=ecommerce
-security.oauth2.client.client-secret=ecommerce123
+security.oauth2.client.scope=${OAUTH2_CLIENT_SCOPE:password}
+security.oauth2.client.client-id=${OAUTH2_CLIENT_CLIENT_ID:ecommerce}
+security.oauth2.client.client-secret=${OAUTH2_CLIENT_CLIENT_SECRET:ecommerce123}
