--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xmlns="http://maven.apache.org/POM/4.0.0"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
@@ -11,13 +11,12 @@
   </parent>
   <groupId>br.com.ecommerce</groupId>
   <artifactId>ecommerce</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>custom-mapper-backend</name>
-  <description>Backend Spring Boot to Custom mapper</description>
+  <version>1.0.0-SNAPSHOT</version>
+  <name>ecommerce</name>
+  <description>Backend Spring Boot to Ecommerce</description>
 
   <properties>
     <java.version>1.8</java.version>
-    <org.mapstruct.version>1.3.0.Final</org.mapstruct.version>
   </properties>
 
   <dependencies>
@@ -62,11 +61,6 @@
       <artifactId>spring-security-oauth2</artifactId>
       <version>2.3.5.RELEASE</version>
     </dependency>
-    <!--<dependency>-->
-    <!--<groupId>com.h2database</groupId>-->
-    <!--<artifactId>h2</artifactId>-->
-    <!--<scope>runtime</scope>-->
-    <!--</dependency>-->
     <dependency>
       <groupId>org.springframework.data</groupId>
       <artifactId>spring-data-mongodb</artifactId>
@@ -90,11 +84,6 @@
       <groupId>org.owasp.encoder</groupId>
       <artifactId>encoder</artifactId>
       <version>1.2.2</version>
-    </dependency>
-    <dependency>
-      <groupId>com.experian.eda.crosscore</groupId>
-      <artifactId>crosscore-api</artifactId>
-      <version>1.2.0</version>
     </dependency>
     <dependency>
       <groupId>org.projectlombok</groupId>
@@ -170,11 +159,6 @@
           <source>1.8</source>
           <target>1.8</target>
           <annotationProcessorPaths>
-            <path>
-              <groupId>org.mapstruct</groupId>
-              <artifactId>mapstruct-processor</artifactId>
-              <version>${org.mapstruct.version}</version>
-            </path>
             <path>
               <groupId>org.projectlombok</groupId>
               <artifactId>lombok</artifactId>
